# SignSight

./: .gitignore  README.md  main.py  model.keras  model.py  pyproject.toml
app/: streamlit_app.py
signsight/: __init__.py  recognizer.py  train.py
